[tool.poetry]
name = "project-h"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
adafruit-circuitpython-servokit = "^1.3.16"
adafruit-circuitpython-pca9685 = "^3.4.11"
adafruit-blinka = "^8.23.0"
rpi-gpio = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
